[package]
name = "webcaster-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
async-stream = "0.3.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["mysql"] }
wtransport = "0.5.0"
anyhow = "1.0.93"
